Simplify path resolving for jar URLs